--- a/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/Edit.cshtml
@@ -15,19 +15,12 @@
     <div class="row-fluid">
         <div class="span12">
             <div class="form-horizontal no-border">
-                @using (Html.BeginFormAntiForgeryPost(Html.ViewContext.HttpContext.Request.Url.PathAndQuery, FormMethod.Post,
-                                                              new { @class = "edit-mode", id = "myForm" })) {
+                @using (Html.BeginFormAntiForgeryPost(Url.Action("Edit", "Admin"), FormMethod.Post,
+                    new {@class = "edit-mode", id = "myForm"})) {
                     @Html.ValidationSummary()
                     <fieldset>
                         <legend>General Information</legend>
                         <section class="data-row control-group">
-                            <div class="span6">
-                                <label class="control-label required" for="DisplayName">@T("Display Name")</label>
-                                <div class="controls errortips">
-                                    @Html.TextBoxFor(m => m.DisplayName, new { @class = "span12", required = "" })
-                                </div>
-                                <meta itemprop="DisplayName" content="@Model.DisplayName" />
-                            </div>
                             <div class="span6">
                                 <label class="control-label" for="inputName">Name</label>
                                 <div class="controls">
@@ -38,23 +31,25 @@
                             </div>
                         </section>
                         <section class="data-row control-group">
-
+                            <div class="span6">
+                                <label class="control-label required" for="DisplayName">@T("Display Name")</label>
+                                <div class="controls errortips">
+                                    @Html.TextBoxFor(m => m.DisplayName, new {@class = "span12", required = ""})
+                                </div>
+                                <meta itemprop="DisplayName" content="@Model.DisplayName" />
+                            </div>
+                        </section>
+                        <section class="data-row control-group">
                             <div class="span6">
                                 <label class="control-label required">@T("Plural Display Name")</label>
                                 <div class="controls errortips">
-                                    @Html.TextBoxFor(m => m.Settings["CollectionDisplayName"], new { @class = "span12 required" })
-                                    <span class="help-block">@T("Display name of the type's collection.")</span>
+                                    @Html.TextBoxFor(m => m.Settings["CollectionDisplayName"], new {@class = "span12 required"})
                                 </div>
                             </div>
                             <div class="span6">
-                                <label class="control-label required">@T("Plural Name")</label>
-                                <div class="controls errortips">
-                                    @Html.TextBoxFor(m => m.Settings["CollectionName"], new { @class = "span12 required safename" })
-                                    <span class="help-block">@T("Technical name of the type's collection.")</span>
-                                </div>
+                                <span class="help-inline">@T("Display name of the type's collection.")</span>
                             </div>
                         </section>
-
                     </fieldset>
                 }
             </div>
