--- a/src/Coevery.Web/Modules/Coevery.Setup/Views/Setup/Index.cshtml
+++ b/src/Coevery.Web/Modules/Coevery.Setup/Views/Setup/Index.cshtml
@@ -7,7 +7,6 @@
 <h1>@Html.TitleForPage(T("Get Started").ToString())</h1>
 
 @using (Html.BeginFormAntiForgeryPost()) {
-@Html.ValidationSummary()
 <h2>@T("Please answer a few questions to configure your site.")</h2>
 <fieldset class="site">
     <div>
@@ -28,39 +27,67 @@
     </div>
 </fieldset>
 if (!Model.DatabaseIsPreconfigured) {
-<fieldset class="data">
-    <legend>@T("How would you like to store your data?")</legend>
+    <fieldset class="data">
+        <legend>@T("How would you like to store your data?")</legend>
         @Html.ValidationMessage("DatabaseOptions", "Unable to setup data storage")
-    <div>
-        @Html.RadioButtonFor(svm => svm.DatabaseProvider, Coevery.Setup.Controllers.SetupDatabaseType.Builtin.ToString(), new { id = "builtin" })
-        <label for="builtin" class="forcheckbox">@T("Use built-in data storage (SQL Server Compact)")</label>
-    </div>
-    <div>
-        @Html.RadioButtonFor(svm => svm.DatabaseProvider, Coevery.Setup.Controllers.SetupDatabaseType.SqlServer.ToString(), new { id = "sqlserver" })
-        <label for="sqlserver" class="forcheckbox">@T("Use an existing SQL Server, SQL Express database")</label>
-    </div>
-    <div>
-        @Html.RadioButtonFor(svm => svm.DatabaseProvider, Coevery.Setup.Controllers.SetupDatabaseType.MySql.ToString(), new { id = "mysql" })
-        <label for="mysql" class="forcheckbox">@T("Use an existing MySql database")</label>
-    </div>
-    <div data-controllerid="builtin" data-defaultstate="hidden">
-        <label for="DatabaseConnectionString">@T("Connection string")</label>
-        @Html.EditorFor(svm => svm.DatabaseConnectionString)
-            
-        <span data-controllerid="sqlserver" class="hint databaseTypeHint">
-            @T("Data Source=sqlServerName;Initial Catalog=dbName;Persist Security Info=True;User ID=userName;Password=password")
-        </span>
+        <div>
+            @Html.RadioButtonFor(svm => svm.DatabaseProvider, Coevery.Setup.Controllers.SetupDatabaseType.Builtin.ToString(), new { id = "builtin" })
+            <label for="builtin" class="forcheckbox">@T("Use built-in data storage (SQL Server Compact)")</label>
+        </div>
+        <div>
+            @Html.RadioButtonFor(svm => svm.DatabaseProvider, Coevery.Setup.Controllers.SetupDatabaseType.SqlServer.ToString(), new { id = "sqlserver" })
+            <label for="sqlserver" class="forcheckbox">@T("Use an existing SQL Server, SQL Express database")</label>
+        </div>
+        <div>
+            @Html.RadioButtonFor(svm => svm.DatabaseProvider, Coevery.Setup.Controllers.SetupDatabaseType.MySql.ToString(), new { id = "mysql" })
+            <label for="mysql" class="forcheckbox">@T("Use an existing MySql database")</label>
+        </div>
+        <div data-controllerid="builtin" data-defaultstate="hidden">
+            <div>
+                <label for="DatabaseServerName">@T("Choose a server:")</label>
+                @Html.EditorFor(svm => svm.DatabaseServerName)
+            </div>
+            <div>
+                <label for="DatabaseName">@T("Choose a database:")</label>
+                @Html.EditorFor(svm => svm.DatabaseName)
+            </div>
+            <div data-controllerid="sqlserver" id="serveranthentication">
+                <label>@T("Server authentication")</label>
+                <div>
+                    @Html.RadioButtonFor(svm => svm.ServerAuthentication, Coevery.Setup.Controllers.DatabaseAuthenticationMode.Windows.ToString(), new { id = "windows" })
+                    <label for="ServerAuthentication" class="forcheckbox">@T("Windows Authentication mode")</label>
+                </div>
+                <div>
+                    @Html.RadioButtonFor(svm => svm.ServerAuthentication, Coevery.Setup.Controllers.DatabaseAuthenticationMode.UserNamePassword.ToString(), new { id = "usernamepassword" })
+                    <label for="ServerAuthentication" class="forcheckbox">@T("User Name and Password")</label>
+                </div>
+                <div data-controllerid="usernamepassword">
+                    <div>
+                        <label for="DatabaseUserName">@T("Choose a user name:")</label>
+                        @Html.EditorFor(svm => svm.DatabaseUserName)
+                    </div>
+                    <div>
+                        <label for="DatabasePassword">@T("Choose a password:")</label>
+                        @Html.PasswordFor(svm => svm.DatabasePassword, new { @class = "text single-line" })
+                    </div>
+                </div>
+            </div>
+            <div data-controllerid="mysql">
+                <label for="DatabaseUserName">@T("Choose a user name:")</label>
+                @Html.EditorFor(svm => svm.DatabaseUserName)
+            </div>
+            <div data-controllerid="mysql">
+                <label for="DatabasePassword">@T("Choose a password:")</label>
+                @Html.PasswordFor(svm => svm.DatabasePassword, new { @class = "text single-line" })
+            </div>
 
-        <span data-controllerid="mysql" class="hint databaseTypeHint">
-            @T("Data Source=serverName;Database=dbName;User Id=userName;Password=password")
-        </span>
+            <br /><br />
+            <label for="DatabaseTablePrefix">@T("Database Table Prefix")</label>
+            @Html.EditorFor(svm => svm.DatabaseTablePrefix)
+        </div>
 
-        <br /><br />
-        <label for="DatabaseTablePrefix">@T("Database Table Prefix")</label>
-        @Html.EditorFor(svm => svm.DatabaseTablePrefix)
-    </div>
-
-</fieldset>
+    </fieldset>
+    @Html.ValidationSummary()
 }
 <div id="throbber">
     <div class="curtain"></div>
