--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsDetailView.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsDetailView.tt
@@ -6,7 +6,7 @@
 <#@ import namespace="Coevery.Core.Common.Extensions" #>
 <#@ import namespace="System.Linq" #>
 <#@ parameter type="System.String" name="EntityName" #>
-
+@using Coevery.Utility.Extensions
 
 <div class="row-fluid view-mode">
 <# foreach (var layoutSection in SectionList) { #>
