remove relationship tab

--- a/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/Detail.cshtml
+++ b/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/Detail.cshtml
@@ -69,9 +69,9 @@
                         <li data-ng-class="{active: showField}">
                             <a data-ng-href="#/Entities/{{$stateParams.Id}}">Fields</a>
                         </li>
-                        <li data-ng-class="{active: showRelation}" title="@T("Works when the entity has been published.")">
+@*                        <li data-ng-class="{active: showRelation}" title="@T("Works when the entity has been published.")">
                             <a data-ng-href="#/Entities/{{$stateParams.Id}}/Relationships">Relationships</a>
-                        </li>
+                        </li>*@
                         <li data-ng-class="{active: showView}" title="@T("Works when the entity has been published.")">
                             <a data-ng-href="#/Entities/{{$stateParams.Id}}/Views">Views</a>
                         </li>
