Remove unused code

--- a/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/ConfirmFieldInfo.cshtml
+++ b/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/ConfirmFieldInfo.cshtml
@@ -27,14 +27,14 @@
                         <input type="checkbox" disabled ng-model="fieldInfo.required" />
                         Required
                     </label>
-                    <label class="checkbox">
+                    @*<label class="checkbox">
                         <input type="checkbox" disabled ng-model="fieldInfo.alwaysInLayout" />
                         Always In Layout
                     </label>
                     <label class="checkbox">
                         <input type="checkbox" disabled ng-model="fieldInfo.isAudit" />
                         IsAudit
-                    </label>
+                    </label>*@
                 </div>
             </section>
             <section class="control-group">
