--- a/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/FillFieldInfo.cshtml
+++ b/src/Coevery.Web/DeveloperTools/EntityManagement/Views/Admin/FillFieldInfo.cshtml
@@ -31,14 +31,14 @@
                             @Html.CheckBox(Model.FieldTypeName + "Settings.Required", Model.Required, new {ng_model = "fieldInfo.required"})
                             @T("Required")
                         </label>
-                        <label class="checkbox">
+                        @*<label class="checkbox">
                             @Html.CheckBox(Model.FieldTypeName + "Settings.AlwaysInLayout", Model.AlwaysInLayout, new {ng_model = "fieldInfo.alwaysInLayout"})
                             @T("Always In Layout")
                         </label>
                         <label class="checkbox">
                             @Html.CheckBox(Model.FieldTypeName + "Settings.IsAudit", Model.IsAudit, new {ng_model = "fieldInfo.isAudit"})
                             @T("IsAudit")
-                        </label>
+                        </label>*@
                     </div>
                 </section>
                 <section class="data-row control-group">
