--- a/src/Coevery.Web/DeveloperTools/RelationshipManagement/Views/Admin/CreateOneToMany.cshtml
+++ b/src/Coevery.Web/DeveloperTools/RelationshipManagement/Views/Admin/CreateOneToMany.cshtml
@@ -147,18 +147,18 @@
                             <input type="checkbox" name="@Html.NameFor(model => model.Required)" ng-model="required" value="true"/>
                             Required
                         </label>
-                        <label class="checkbox">
+                        @*<label class="checkbox">
                             <input type="checkbox" name="@Html.NameFor(model => model.AlwaysInLayout)" ng-model="alwaysInLayout" value="true"/>
                             Always In Layout
-                        </label>
+                        </label>*@
                         <label class="checkbox">
                             <input type="checkbox" name="@Html.NameFor(model => model.DisplayAsLink)" value="true"/>
                             Display As Link
                         </label>
-                        <label class="checkbox">
+                        @*<label class="checkbox">
                             <input type="checkbox" name="@Html.NameFor(model => model.IsAudit)" value="true"/>
                             Is Audit
-                        </label>
+                        </label>*@
                     </div>
                 </section>
 
